objects/CustomerTrend__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>種別</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>顧客数</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>取引先所有者</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>日付</label>
        <type>Date</type>
    </fields>
    <label>顧客数変遷</label>
    <nameField>
        <label>スナップショット：顧客数名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>